REGRESSION(r246033/r246496): [GTK] Kinetic scrolling doesn't work https://bugs.webkit.org/show_bug.cgi?id=199322

Patch by Alexander Mikhaylenko <exalm7659@gmail.com> on 2019-07-20
Reviewed by Michael Catanzaro.

Source/WebCore:

Check ENABLE(KINETIC_SCROLLING) instead of ENABLE(ASYNC_SCROLLING) for kinetic scrolling.

* platform/PlatformWheelEvent.h:
* platform/generic/ScrollAnimatorGeneric.cpp:
(WebCore::ScrollAnimatorGeneric::handleWheelEvent):
* platform/gtk/PlatformWheelEventGtk.cpp:
(WebCore::PlatformWheelEvent::PlatformWheelEvent):

Source/WebKit:

Check ENABLE(KINETIC_SCROLLING) instead of ENABLE(ASYNC_SCROLLING) when setting wheel event phase and momentum phase.

* Shared/WebEventConversion.cpp:
(WebKit::WebKit2PlatformWheelEvent::WebKit2PlatformWheelEvent):

Source/WTF:

Introduce ENABLE_KINETIC_SCROLLING to explicitly always have kinetic scrolling on GTK.

* wtf/Platform.h:

Canonical link: https://commits.webkit.org/213832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247670 268f45cc-cd09-0410-ab3c-d52691b4dbfc